--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,12 +6,12 @@ table {
 }
 
 td, th {
-  border: 1px solid #dddddd;
+  border: 1px solid #2b0808;
   text-align: left;
   padding: 8px;
 }
 
 tr:nth-child(even) {
-  background-color: #dddddd;
+  background-color: rgb(219, 211, 211);
 }
 </style>
