--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,7 +13,10 @@
 }
 
   tr:nth-child(even) {
-  background-color: rgb(219, 211, 211);
+  background-color: #f2f2f2;
 }
+  tr:hover {
+    background-color: #ddd;
+  }
 
 </style>
